修改 界面样式
添加 首页日期控件
添加 全局表格样式
修改 全局标题栏样式
修改 首页内容显示逻辑
修改 首页教练信息布局
修改 首页时间表样式
删除 多余debug文件

--- a/pages/home/home.wxml
+++ b/pages/home/home.wxml
@@ -1,35 +1,67 @@
-<view class='info'>
-<view class="photoset">
-<image src="../image/photo.png" mode="aspectFill" class="photo">     </image>
-</view>
-<view class="coach">
-<text class="coach1">姓名：</text>
-<text>\n</text>
-<text class="coach1">车牌号：</text>
-<text>\n</text>
+<view class='container'>
 
-<text class="coach1">科目：</text>
-<text>\n</text>
-
-<text class="coach1">电话：</text>
-</view>
-</view>
-<text>\n</text>
-<view class="schedule"> 
-    <text >训练表：</text>
-    <view style='flex-direction:row'> 
-    <text decode="{{true}}">&nbsp;&nbsp;&nbsp;姓名&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; &nbsp;&nbsp;  </text>
-    <text space='emsp'>    </text>
-    <text decode="{{true}}">时间&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; &nbsp;   </text>
-    <text>\t\t\t</text>
-    <text decode="{{true}}">&nbsp;&nbsp;电话&nbsp;&nbsp;   </text>
-    <text>\t\t\t</text>
+<!--教练信息-->
+  <view class='info'>
+    <!--教练照片-->
+    <image src="../image/photo.png" mode="aspectFill" class="photo"></image>
+    <!--教练详细信息-->
+    <view class="coach-info">
+      <text class="coach-info-item">姓　名：{{coachInfo[0]}}</text>
+      <text class="coach-info-item">车牌号：{{coachInfo[1]}}</text>
+      <text class="coach-info-item">科　目：{{coachInfo[2]}}</text>
+      <text class="coach-info-item">电　话：{{coachInfo[3]}}</text>
     </view>
+  </view>
+
+  <view class='block'>
+    <picker mode="date" value="{{date}}" start="{{date}}" end="{{dateEnd}}" bindchange="bindDateChange">
+      <view class="picker">
+        显示日期:  {{date}}
+      </view>
+    </picker>
+  </view>
+
+  <!--训练时间表-->
+  <view class="table">
+    <view class="tr bg-w">
+      <view class="th">学员姓名</view>
+      <view class="th">训练时间</view>
+      <view class="th-50 ">电话</view>
+    </view>
+    <block wx:for="{{schedule}}" wx:key="schedule">
+      <view class="tr bg-g" wx:if="{{index % 2 == 0}}">
+        <view class="td">{{item.name}}</view>
+        <view class="td">{{item.text}}</view>
+        <view class="td-50">{{item.tel}}</view>
+      </view>
+      <view class="tr" wx:else>
+        <view class="td">{{item.name}}</view>
+        <view class="td">{{item.text}}</view>
+        <view class="td-50">{{item.tel}}</view>
+      </view>
+    </block>
+  </view>
+  
+  <!--
+  <view class="schedule"> 
+      <text >训练表：</text>
+      <view style='flex-direction:row'> 
+      <text decode="{{true}}">&nbsp;&nbsp;&nbsp;姓名&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; &nbsp;&nbsp;  </text>
+      <text space='emsp'>    </text>
+      <text decode="{{true}}">时间&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; &nbsp;   </text>
+      <text>\t\t\t</text>
+      <text decode="{{true}}">&nbsp;&nbsp;电话&nbsp;&nbsp;   </text>
+      <text>\t\t\t</text>
+      </view>
+  </view>
+  <view style='dispaly:flex:flex-direction:row'>
+    <view><text>{{sname}}</text></view>
+    <view><text>{{time}}</text></view>
+    <view><text>{{tel}}</text></view>
+  </view>
+
+  <image src="../image/list1.jpeg" mode="aspectFill" class="list"></image>
+
+  <button class="refresh">刷新</button>
+  -->
 </view>
-<view style='dispaly:flex:flex-direction:row'>
-<view><text>{{sname}}</text></view>
-<view><text>{{time}}</text></view>
-<view><text>{{tel}}</text></view>
-</view>
-<image src="../image/list1.jpeg" mode="aspectFill" class="list"></image>
-<button class="refresh">刷新</button>
