--- a/pages/home/home.wxss
+++ b/pages/home/home.wxss
@@ -1,49 +1,41 @@
-.photo{
+.photo {
+	width: 200rpx;
+	height: 260rpx;
+  float: right;
+}
+
+.info {
   display: block;
-  margin-top: 0px;
-  margin: auto;
-  height: 130px;
-  width:100px;
-  }
-.photoset{
-  height: 130px;
-  width: 100px;
-  display: flex;
-}
-.coach1{
-  font-size: 20px;
-}
-.info{
-  display: flex;
-  flex-direction: row;
+  margin-bottom: 40rpx;
+  overflow: hidden;
 }
 
-.schedule{
-font-weight: bolder;
-text-align: center;
-
-}
-.schedule1{
-  font-weight: bold;
-}
-.coach{
-height: 130px;
-width: 300px;
-font-size: 45rpx;
-
-
-
-flex-direction: column;
-display: inline-block
-}
-.schedule{
-line-height:82rpx;
-width:100%;
+.schedule {
+	text-align: center;
+	font-weight: bolder;
 }
 
+.schedule1 {
+	font-weight: bold;
+}
 
-.refresh{
-  font-size: 10px;
-  height: 20px;
-  width: 50px;
+.coach-info {
+  margin-left: 20rpx;
+	float: left;
+}
+
+.coach-info-item {
+  line-height: 1.8rem;
+	display: block;
+}
+
+.schedule {
+	width: 100%;
+	line-height: 82rpx;
+}
+
+.refresh {
+	width: 50px;
+	height: 20px;
+	font-size: 10px;
 }
