--- a/pages/mine/mine.wxml
+++ b/pages/mine/mine.wxml
@@ -6,14 +6,14 @@
                 <view class="infotext">
                     <image wx:if="{{imgUrl!=null}}" class="userinfo-avatar" src="{{imgUrl}}" background-size="cover"></image>
                     <image wx:else class="userinfo-avatar" src="{{userInfo.avatarUrl}}" background-size="cover"></image>
-                    <image class="menu-item-arrow" src="../image/arrowright.png"></image>
+                    <image class="menu-item-arrow" src="../../images/arrowright.png"></image>
                 </view>
             </view>
             <view class="info-items" bindtap="setName">
                 <text>教练信息</text>
                 <view class="infotext">
                    <text class="info-motto">{{infoname}}</text>
-                    <image class="menu-item-arrow" src="../image/arrowright.png"></image>
+                    <image class="menu-item-arrow" src="../../images/arrowright.png"></image>
                 </view>
             </view>
             <view class="info-items">
@@ -24,7 +24,7 @@
                        {{array[index]}}
                         </view>
                     </picker>
-                    <image class="menu-item-arrow" src="../image/arrowright.png"></image>
+                    <image class="menu-item-arrow" src="../../images/arrowright.png"></image>
                 </view>
             </view>
             <view class="info-items">
@@ -37,14 +37,14 @@
                 <text>我的评论</text>
                 <view class="infotext">
                    <text class="info-motto">评论内容</text>
-                    <image class="menu-item-arrow" src="../image/arrowright.png"></image>
+                    <image class="menu-item-arrow" src="../../images/arrowright.png"></image>
                 </view>
             </view>
             <view class="info-items" bindtap="getregion">
                 <text>工作日志</text>
                 <view class="infotext">
                    <text class="info-motto">日志内容</text>
-                    <image class="menu-item-arrow" src="../image/arrowright.png"></image>
+                    <image class="menu-item-arrow" src="../../images/arrowright.png"></image>
                 </view>
             </view>
         </view>
