--- a/app.wxss
+++ b/app.wxss
@@ -1,17 +1,46 @@
+/*!
+ * 学车微信小程序教练端 (https://github.com/EpearthLtd/aganjiaolian)
+ * 版权所有(C)2018 成都曦璞科技有限公司
+ *
+ * 作者author：郑维一
+ * 公司网站site：www.epearth.com
+*/
 
 @import 'style/weui.wxss';
 @import 'style/agan.wxss';
 
-.block {
-  display: block;
+page{
+    background-color: #F8F8F8;
+    font-size: 16px;
+    font-family: -apple-system-font,Helvetica Neue,Helvetica,sans-serif;
+}
+.page__hd {
+    padding: 80rpx;
+}
+.page__bd {
+    padding-bottom: 80rpx;
+}
+.page__bd_spacing {
+    padding-left: 30rpx;
+    padding-right: 30rpx;
 }
 
-.bg-default {
-  background-color: #CCC;
+.page__ft{
+    padding-bottom: 20rpx;
+    text-align: center;
 }
 
-.container {
-  padding: 0 20rpx;
+.page__title {
+    text-align: left;
+    font-size: 40rpx;
+    font-weight: 400;
+}
+
+.page__desc {
+    margin-top: 10rpx;
+    color: #888888;
+    text-align: left;
+    font-size: 28rpx;
 }
 
 /* 表格样式 */
