--- a/style/agan.wxss
+++ b/style/agan.wxss
@@ -1,18 +1,15 @@
-/**
- * 阿甘学车 (https://github.com/EpearthLtd/aganWeixing)
+/*!
+ * 学车微信小程序教练端 (https://github.com/EpearthLtd/aganjiaolian)
  * 版权所有(C)2018 成都曦璞科技有限公司
- * Licensed under the MIT license
- * 
- * 文件名file：app.wxss
- * 描述description：学车微信小程序学员端-小程序全局样式
+ *
  * 作者author：郑维一
  * 公司网站site：www.epearth.com
- */
+*/
 
 /**
  * Color style
  */
- .color-bg {
+.color-bg {
   background-color: #F8F8F8;
 }
 
