添加 用户头像显示
优化 教练信息样式和布局
优化 教学车辆照片样式

--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -9,10 +9,21 @@
 <!--教练信息-->
   <view class="page__bd_spacing color-bg-white">
     <!--教练信息-->
-    <view class="weui-flex">
-      <view class="weui-flex__item"><view class="placeholder">weui</view></view>
-      <view class="weui-flex__item"><view class="placeholder">weui</view></view>
-      <view class="weui-flex__item"><view class="placeholder">weui</view></view>
+    <view class="weui-flex xipu-flex__center">
+      <!--地址-->
+      <view class="xipu-flex__center">
+        <image class="xipu-user__add__image" src="{{userInfo.avatarUrl}}" background-size="cover"></image>
+        <text class='xipu-text__smaller__center'>四川大学锦城学院</text>
+      </view>
+      <!--用户头像-->
+      <view class="">
+        <image class="xipu-user__photo" src="{{userInfo.avatarUrl}}" background-size="cover"></image>
+      </view>
+      <!--科目二-->
+      <view class="xipu-flex__center">
+        <image class="xipu-user__add__image" src="{{userInfo.avatarUrl}}" background-size="cover"></image>
+        <text class='xipu-text__smaller__center'>科目二</text>
+      </view>
     </view>
     <view class="weui-flex">
       <view><view class="placeholder">weui</view></view>
@@ -24,7 +35,7 @@
 <!--车辆信息-->
   <view class="page__bd_spacing color-bg-white">
     <view class="weui-cells__title">教学用车</view>
-    <image src='../../images/car-default.png'></image>
+    <image class='xipu-image__car' src='../../images/car-default.png'></image>
     <view class="weui-flex">
       <view class="weui-flex__item">车型：捷达</view>
       <view class="weui-flex__item">颜色：白色</view>
