--- a/style/agan.wxss
+++ b/style/agan.wxss
@@ -15,6 +15,23 @@
   flex-direction: column
 }
 
+.xipu-list__icon {
+  width: 50rpx;
+  height: 50rpx;
+}
+
+.xipu-list__mg__bottom {
+  margin-bottom: 10rpx
+}
+
+.xipu-margin-top__25 {
+  margin-top: 25rpx;
+}
+
+.xipu-margin-content__20 {
+  margin: 20rpx 30rpx;
+}
+
 /**
  * Color style
  */
