添加 操作按钮

--- a/pages/mine/mine.wxml
+++ b/pages/mine/mine.wxml
@@ -24,11 +24,19 @@
 
 <view class="weui-cells">
   <navigator url="" class="weui-cell weui-cell_access" hover-class="weui-cell_active">
-    <view class="weui-cell__bd">cell standard</view>
+    <view class="weui-cell__bd">待开发</view>
     <view class="weui-cell__ft weui-cell__ft_in-access"></view>
   </navigator>
   <navigator url="" class="weui-cell weui-cell_access" hover-class="weui-cell_active">
-    <view class="weui-cell__bd">cell standard</view>
+    <view class="weui-cell__bd">电话号码</view>
+    <view class="weui-cell__ft">13812345678</view>
+  </navigator>
+  <navigator url="" class="weui-cell weui-cell_access" hover-class="weui-cell_active">
+    <view class="weui-cell__bd">我的评价</view>
+    <view class="weui-cell__ft weui-cell__ft_in-access"></view>
+  </navigator>
+  <navigator url="" class="weui-cell weui-cell_access" hover-class="weui-cell_active">
+    <view class="weui-cell__bd">阿甘校园购</view>
     <view class="weui-cell__ft weui-cell__ft_in-access"></view>
   </navigator>
 </view>
