--- a/pages/mine/mine.wxml
+++ b/pages/mine/mine.wxml
@@ -29,15 +29,19 @@
     <view class="weui-cell__bd">待开发</view>
     <view class="weui-cell__ft weui-cell__ft_in-access"></view>
   </navigator>
-  <navigator url="" class="weui-cell weui-cell_access" hover-class="weui-cell_active">
+  <view class="weui-cell weui-cell_access" hover-class="weui-cell_active">
     <view class="weui-cell__bd">电话号码</view>
     <view class="weui-cell__ft">13812345678</view>
-  </navigator>
+  </view>
   <navigator url="" class="weui-cell weui-cell_access" hover-class="weui-cell_active">
     <view class="weui-cell__bd">我的评价</view>
     <view class="weui-cell__ft weui-cell__ft_in-access"></view>
   </navigator>
   <navigator url="" class="weui-cell weui-cell_access" hover-class="weui-cell_active">
+    <view class="weui-cell__bd">工作日志</view>
+    <view class="weui-cell__ft weui-cell__ft_in-access"></view>
+  </navigator>
+  <navigator url="" class="weui-cell weui-cell_access" hover-class="weui-cell_active" target="miniProgram" open-type="navigate" app-id="wx6f53b2295b1349d9" path="">
     <view class="weui-cell__bd">阿甘校园购</view>
     <view class="weui-cell__ft weui-cell__ft_in-access"></view>
   </navigator>
