--- a/pages/mine/mine.wxml
+++ b/pages/mine/mine.wxml
@@ -33,7 +33,7 @@
     <view class="weui-cell__bd">电话号码</view>
     <view class="weui-cell__ft">13812345678</view>
   </view>
-  <navigator url="" class="weui-cell weui-cell_access" hover-class="weui-cell_active">
+  <navigator url="evaluation/evaluation" class="weui-cell weui-cell_access" hover-class="weui-cell_active">
     <view class="weui-cell__bd">我的评价</view>
     <view class="weui-cell__ft weui-cell__ft_in-access"></view>
   </navigator>
