修改 主色调为#e93737

--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -68,6 +68,6 @@
 
 .xipu-placeholder__rectangle {
   height: 80rpx;
-  border: 8rpx #FF9326 solid;
+  border: 8rpx #e93737 solid;
   margin-right: 24rpx
 }
