--- a/pages/training/timeTable/timetable.wxml
+++ b/pages/training/timeTable/timetable.wxml
@@ -8,7 +8,7 @@
 
 <text class='card-top'>当前已约课程表</text>
 <view class='card font-medium' wx:for='{{trainingList}}' wx:key='item.id'>
-  <view class='includeFloat bd-bottom pa-10'>
+  <view class='includeFloat pa-10'>
     <view class='mg-bottom-40'>
       <text class='font-big'>{{item.licenceName}} {{item.subjectName}}训练</text>
       <text class='fl-right color-{{item.traininStatustColor}}'>{{item.traininStatustName}}</text>
@@ -16,9 +16,12 @@
     <text class='block mg-bottom-10'>时间：{{item.date}} {{item.startTime}}-{{item.endTime}}</text>
     <text class='block mg-bottom-10'>地址：{{item.add}}</text>
   </view>
-  <view class='includeFloat pa-10'>
-    <text class='block mg-bottom-10'>教练：{{item.coachName}}</text>
-    <text class='block mg-bottom-10'>车牌：{{item.licencePlate}}</text>
-    <text class='' data-tel='{{item.coachTel}}' bindtap='callCoach'>电话：{{item.coachTel}} (点击拨打)</text>
+  <view class='weui-cells weui-cells_after-title'>
+    <view class="weui-cell weui-cell_access" hover-class="weui-cell_active" wx:for="{{item.students}}" wx:key="{{item.id}}">
+      <view class="weui-cell__bd">{{item.studentName}}</view>
+      <view class="weui-cell__ft">
+        <image class='cell-icon' src='../../../images/phone-gray.svg'></image>
+      </view>
+    </view>
   </view>
 </view>
