--- a/style/xipu.wxss
+++ b/style/xipu.wxss
@@ -174,6 +174,26 @@
   font-weight: bold;
 }
 
+.xipu-text__medium {
+  font-size: medium
+}
+
+.xipu-text__smaller {
+  font-size: smaller
+}
+
+.xipu-text__small {
+  font-size: small
+}
+
+.xipu-text__x-small {
+  font-size: x-small
+}
+
+.xipu-text__xx-small {
+  font-size: xx-small
+}
+
 /**
  * Color style
  */
