添加 学员列表信息页
添加 “删除”图标
添加 全局卡片内容样式
修改 全局卡片默认样式的背景颜色
修改 训练页联系学员按钮点击事件
修改 训练详情页显示内容以适配教练使用
修改 训练详情页样式以适应显示内容变化
修改 课程表页面的电话图标使用全局样式
修改 我的页面“我的学员”按钮打开学员列表页面
删除 我的页面“我的学员”按钮的提示文本

--- a/pages/me/students/students.wxss
+++ b/pages/me/students/students.wxss
@@ -5,12 +5,14 @@
  * 作者author：郑维一
  * 公司网站site：www.epearth.com
 */
- 
- .section {
-   background-color: #FFF;
-   padding: 25rpx 60rpx;
- }
 
- .weui-cell {
-	padding: 20rpx 30rpx 20rpx 30rpx;
+/* 重写全局样式 */
+.xipu-card__default {
+  margin-bottom: 15rpx;
 }
+
+.xipu-icon__right {
+  margin-left: 25rpx
+}
+
+/* 页面样式 */
