--- a/pages/me/me.wxml
+++ b/pages/me/me.wxml
@@ -31,9 +31,9 @@
     <view class="weui-cell__bd {{item.className}}">{{item.text}}</view>
     <view class="weui-cell__ft weui-cell__ft_in-access"></view>
   </navigator>
-  <navigator class="weui-cell weui-cell_access" hover-class="weui-cell_active" url="coach/coach" wx:if="{{personalInfo.userStatus>0}}">
+  <navigator class="weui-cell weui-cell_access" hover-class="weui-cell_active" url="students/students" wx:if="{{personalInfo.userStatus>0}}">
     <view class="weui-cell__bd {{item.className}}">我的学员</view>
-    <view class="weui-cell__ft weui-cell__ft_in-access">{{personalInfo.coachId!=null?coachInfo.name:'未指定教练'}}</view>
+    <view class="weui-cell__ft weui-cell__ft_in-access"></view>
   </navigator>
 </view>
 
