--- a/pages/training/details/details.wxml
+++ b/pages/training/details/details.wxml
@@ -6,35 +6,52 @@
   公司网站site：www.epearth.com
 -->
 
-<view class='card'>
-  <view>
-    <text class='block center font-medium'>{{trainingInfo.siteName}}</text>
-    <text class='block center font-larger mg-20-vertical'>{{trainingInfo.licenceTypeName}} {{trainingInfo.subjectName}}训练</text>
-    <text class='block center mg-20-vertical font-small color-{{trainingInfo.trainingStatusColor}}'>{{trainingInfo.trainingStatusName}}</text>
+<view class='xipu-card__page'>
+  <view class='xipu-card__default'>
+    <view class='flex-hd'>
+      <text class='flex-hd__item font-medium'>{{trainingInfo.siteName}}</text>
+      <text class='flex-hd__item font-larger'>{{trainingInfo.licenceName}} {{trainingInfo.subjectName}}训练</text>
+      <text class='flex-hd__item color-{{trainingInfo.trainingStatusColor}}'>{{trainingInfo.traininStatustName}}</text>
+    </view>
+    <view class='xipu-card__bd font-small'>
+      <view class='xipu-card__bd-item'>
+        <text class='color-gray'>训练时间</text>
+        <text class=''>{{trainingInfo.date}} {{trainingInfo.startTime}} - {{trainingInfo.endTime}}</text>
+      </view>
+      <view class='xipu-card__bd-item'>
+        <text class='color-gray'>训练编号</text>
+        <text class=''>{{trainingInfo.id}}</text>
+      </view>
+      <view class='xipu-card__bd-item'>
+        <text class='color-gray'>训练时长</text>
+        <text class=''>{{trainingInfo.duration}}分钟</text>
+      </view>
+      <view class='xipu-card__bd-item'>
+        <text class='color-gray'>弹性时间</text>
+        <text class=''>{{trainingInfo.flex}}分钟</text>
+      </view>
+      <view class='xipu-card__bd-item'>
+        <text class='color-gray'>训练地点</text>
+        <text class=''>{{trainingInfo.add}}</text>
+      </view>
+    </view>
   </view>
-  <view class='bd-bottom'>
-    <view class='mg-20-vertical font-small'>
-      <text class='color-gray'>教练</text>
-      <text class='fl-right'>{{trainingInfo.coachName}}</text>
-    </view>
-    <view class='mg-20-vertical font-small'>
-      <text class='color-gray'>车牌</text>
-      <text class='fl-right'>{{trainingInfo.licencePlate}}</text>
-    </view>
-    <view class='mg-20-vertical font-small'>
-      <text class='color-gray'>电话</text>
-      <text class='fl-right'>{{trainingInfo.coachTel}}</text>
-    </view>
-  </view>
-  <view>
-    <view class='mg-20-vertical font-small'>
-      <text class='color-gray'>训练时间</text>
-      <text class='fl-right'>{{trainingInfo.date}} {{trainingInfo.startTime}} - {{trainingInfo.endTime}}</text>
-    </view>
-    <view class='font-small'>
-      <text class='color-gray'>训练编号</text>
-      <text class='fl-right'>{{trainingInfo.id}}</text>
-    </view>
-  </view>
-</view>
 
+  <!-- 已约学员 -->
+  <view class='xipu-card__default' wx:for="{{trainingInfo.student}}" wx:key="{{item.id}}">
+    <view class='xipu-card__bd-item'>
+      <text>{{item.studentName}}</text>
+      <view>
+        <image class='xipu-icon__right' src='../../../images/phone-gray.svg'></image>
+        <image class='xipu-icon__right' src='../../../images/delete-gray.svg'></image>
+      </view>
+    </view>
+  </view>
+
+  <view class='button-sp-area'>
+    <button class="weui-btn" type="primary" plain="true" hidden='{{trainingInfo.trainingStatus==0?false:true}}'>帮学员预约</button>
+    <button class="weui-btn" type="warn" plain="true" hidden='{{trainingInfo.trainingStatus==0?false:true}}'>取消这次训练</button>
+    <button class="weui-btn" type="default" plain="true" open-type="contact">联系客服</button>
+  </view>
+
+</view>
