--- a/pages/me/me.wxml
+++ b/pages/me/me.wxml
@@ -14,7 +14,7 @@
     <navigator class='userinfo' url='personal/personal' hover-class="userinfo-hover">
       <view class='userinfo-info'>
         <text class='userNickName'>{{userInfo.nickName}} </text>
-        <text class='userStatus icon-{{userStatus[0]}}'>{{userStatus[1]}}</text>
+        <!--<text class='userStatus icon-{{userStatus[0]}}'>{{userStatus[1]}}</text>-->
       </view>
       <view class='userinfo-avatar'>
         <image class="user-profile-photo" src="{{userInfo.avatarUrl}}" background-size="cover"></image>
@@ -31,7 +31,7 @@
     <view class="weui-cell__bd {{item.className}}">{{item.text}}</view>
     <view class="weui-cell__ft weui-cell__ft_in-access"></view>
   </navigator>
-  <navigator class="weui-cell weui-cell_access" hover-class="weui-cell_active" url="students/students" wx:if="{{personalInfo.userStatus>0}}">
+  <navigator class="weui-cell weui-cell_access" hover-class="weui-cell_active" url="students/students">
     <view class="weui-cell__bd {{item.className}}">我的学员</view>
     <view class="weui-cell__ft weui-cell__ft_in-access"></view>
   </navigator>
